--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -502,91 +502,91 @@
         q.innerHTML = 2 - x;
       }
       if (a.innerHTML == 0) {
-        a.innerHTML = "Today is adharsh's birthday, dont forgot to wish him!";
+        a.innerHTML = "Today is Adharsh's birthday, dont forgot to wish him!";
       } else if (a.innerHTML == 1) {
         a.innerHTML = "Tomorrow";
       }
       if (b.innerHTML == 0) {
-        b.innerHTML = "Today is balaji's birthday, dont forgot to wish him!";
+        b.innerHTML = "Today is Balaji's birthday, dont forgot to wish him!";
       } else if (b.innerHTML == 1) {
         b.innerHTML - "Tomorrow";
       }
       if (c.innerHTML == 0) {
-        c.innerHTML = "Today is dhikshan's birthday, dont forgot to wish him!";
+        c.innerHTML = "Today is Dhikshan's birthday, dont forgot to wish him!";
       } else if (c.innerHTML == 1) {
         c.innerHTML = "Tomorrow";
       }
       if (d.innerHTML == 0) {
-        d.innerHTML = "Today is gokul's birthday, dont forgot to wish him!";
+        d.innerHTML = "Today is Gokul's birthday, dont forgot to wish him!";
       } else if (d.innerHTML == 1) {
         d.innerHTML = "Tomorrow";
       }
       if (e.innerHTML == 0) {
-        e.innerHTML = "Today is harsha's birthday, dont forgot to wish him!";
+        e.innerHTML = "Today is Harsha's birthday, dont forgot to wish him!";
       } else if (e.innerHTML == 1) {
         e.innerHTML = "Tomorrow";
       }
       if (f.innerHTML == 0) {
-        f.innerHTML = "Today is joshuva's birthday, dont forgot to wish him!";
+        f.innerHTML = "Today is Joshuva's birthday, dont forgot to wish him!";
       } else if (f.innerHTML == 1) {
         f.innerHTML = "Tomorrow";
       }
       if (g.innerHTML == 0) {
         g.innerHTML =
-          "Today is keerthivasan's birthday, dont forgot to wish him!";
+          "Today is Keerthivasan's birthday, dont forgot to wish him!";
       } else if (g.innerHTML == 1) {
         g.innerHTML = "Tomorrow";
       }
       if (h.innerHTML == 0) {
-        h.innerHTML = "Today is mithran's birthday, dont forgot to wish him!";
+        h.innerHTML = "Today is Mitran's birthday, dont forgot to wish him!";
       } else if (h.innerHTML == 1) {
         h.innerHTML = "Tomorrow";
       }
       if (i.innerHTML == 0) {
-        i.innerHTML = "Today is nitin's birthday, dont forgot to wish him!";
+        i.innerHTML = "Today is Nitin's birthday, dont forgot to wish him!";
       } else if (i.innerHTML == 1) {
         i.innerHTML = "Tomorrow";
       }
       if (j.innerHTML == 0) {
-        j.innerHTML = "Today is praveen's birthday, dont forgot to wish him!";
+        j.innerHTML = "Today is Praveen's birthday, dont forgot to wish him!";
       } else if (j.innerHTML == 1) {
         j.innerHTML = "Tomorrow";
       }
       if (k.innerHTML == 0) {
-        k.innerHTML = "Today is sanjay's birthday, dont forgot to wish him!";
+        k.innerHTML = "Today is Sanjay's birthday, dont forgot to wish him!";
       } else if (k.innerHTML == 1) {
         k.innerHTML = "Tomorrow";
       }
       if (l.innerHTML == 0) {
-        l.innerHTML = "Today is shaswad's birthday, dont forgot to wish him!";
+        l.innerHTML = "Today is Shaswad's birthday, dont forgot to wish him!";
       } else if (l.innerHTML == 1) {
         l.innerHTML = "Tomorrow";
       }
       if (m.innerHTML == 0) {
         m.innerHTML =
-          "Today is seshavardhan's birthday, dont forgot to wish him!";
+          "Today is Seshavardhan's birthday, dont forgot to wish him!";
       } else if (m.innerHTML == 1) {
         m.innerHTML = "Tomorrow";
       }
       if (n.innerHTML == 0) {
         n.innerHTML =
-          "Today is srivarshan's birthday, dont forgot to wish him!";
+          "Today is Srivarshan's birthday, dont forgot to wish him!";
       } else if (n.innerHTML == 1) {
         n.innerHTML = "Tomorrow";
       }
       if (o.innerHTML == 0) {
         o.innerHTML =
-          "Today is saichiranjeevi's birthday, dont forgot to wish him!";
+          "Today is Saichiranjeevi's birthday, dont forgot to wish him!";
       } else if (o.innerHTML == 1) {
         o.innerHTML = "Tomorrow";
       }
       if (p.innerHTML == 0) {
-        p.innerHTML = "Today is tinakaran's birthday, dont forgot to wish him!";
+        p.innerHTML = "Today is Tinakaran's birthday, dont forgot to wish him!";
       } else if (p.innerHTML == 1) {
         p.innerHTML = "Tomorrow";
       }
       if (q.innerHTML == 0) {
-        q.innerHTML = "Today is vishnu's birthday, dont forgot to wish him!";
+        q.innerHTML = "Today is Vishnu's birthday, dont forgot to wish him!";
       } else if (q.innerHTML == 1) {
         q.innerHTML = "Tomorrow";
       }
